more layout issues debugging

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@
     border: 0;
     min-height: 100%;
     min-width: 100%;
+    font-size: 1em;
     -webkit-appearance: none;
     appearance:none;
 }
@@ -100,7 +101,7 @@ input {
     font-size: x-small;
     font-weight:400;
     display: inline-block;
-    width: 9em;
+    width: 10em;
     padding: 2em;
     margin-left: 15em;
   }
@@ -110,7 +111,7 @@ input {
 .submit {
     grid-column:2;
     grid-row: 4;
-    display:inline-block;
+    text-align: center;
     background-color: whitesmoke;
     padding-left: 2em;
     padding-top:1em;
@@ -137,7 +138,7 @@ input {
     button {
         padding:15px; 
         margin-top: 1.5em;
-        margin-left: 295px;
+        argin-left: 295px;
         background:rgb(0,181,226); 
         color: black;
         border:0 none;
